<resources>
    <string name="app_name">Memories Keeper</string>
    <string name="welcome">Welcome to the Memories Keeper App!</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="first_fragment_label">Your Memories List</string>
    <string name="second_fragment_label">Memory</string>
    <string name="next">Next</string>
    <string name="go_back">Go Back to the List</string>
    <string name="log_out">Log out</string>
    <string name="add_memory">Add Memory</string>
    <string name="add_new_memory">Add New Memory</string>
    <string name="name">Name:</string>
    <string name="location">Location:</string>
    <string name="description">Description:</string>
    <string name="memories_collection_name">Memories</string>
    <string name="photo">Photo</string>
    <string name="upload">Upload</string>
    <string name="image_bytes">imageBytes</string>
    <string name="notification_memory_progress_title">Creating memory...</string>
    <string name="notification_memory_progress_description">Your memory files are being uploaded to the cloud</string>
    <string name="notification_memory_error_title">Upload Error</string>
    <string name="notification_memory_success_description">Your memory was successfully created!</string>
    <string name="notification_memory_success_title">Memory Created</string>
    <string name="created_at">Created On:</string>
    <string name="memory_photo">Memory Photo</string>
</resources>