<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MemoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/txtMemoryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_fragment_label"
            android:textSize="26sp"
            android:layout_margin="15dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/textViewCreatedOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/created_at"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/AddMemoryElement" />

            <TextView
                android:id="@+id/txtMemoryCreated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/created_at"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/AddMemoryElement" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/textViewMemoryLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                style="@style/AddMemoryElement" />

            <TextView
                android:id="@+id/txtMemoryLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                style="@style/AddMemoryElement" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewMemoryDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            style="@style/AddMemoryElement"
            android:paddingTop="15dp" />

        <TextView
            android:id="@+id/txtMemoryDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            style="@style/AddMemoryElement" />

        <ImageView
            android:id="@+id/imgMemory"
            style="@style/AddMemoryElement"
            android:paddingTop="15dp"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:scaleType="centerInside"
            android:contentDescription="@string/memory_photo"
            tools:src="@tools:sample/avatars" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>